fix issues with autotest and update table schema

--- a/app/views/partials/_menubar.html.haml
+++ b/app/views/partials/_menubar.html.haml
@@ -5,12 +5,12 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand{href: url_for(:controller => 'welcome', :action => 'index')} MogToBeats
+      %a.brand{href: "/welcome#index"} MogToBeats
       #main-menu.nav-collapse.collapse
         %ul#main-menu-left.nav
           %li
             -#%i.icon-home
-            %a{href: url_for(:controller => 'welcome', :action => 'index')} Home
+            %a{href: "/welcome#index"} Home
 
         -#  %li
         -#    %a#swatch-link{href: "../#gallery"} Gallery
