Latest updates the the track model and view.

--- a/app/views/layouts/_page_footer.html.haml
+++ b/app/views/layouts/_page_footer.html.haml
@@ -8,7 +8,7 @@
         %a{href: "http://bicyclelad.com"} Blog
         %a{href: "https://twitter.com/dabigmig"} Twitter
         %a{href: "https://github.com/mjelks/"} GitHub
-        %a{href: "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F22JEM3Q78JC2"} Donate
+        %a{href: "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B3VXX94SN4WGA", :target => 'blank'} Donate
       Made by
       = succeed "." do
         %a{href: "http://michaeljelks.com", rel: "nofollow"} Michael Jelks
