--- a/app/views/partials/_menubar.html.haml
+++ b/app/views/partials/_menubar.html.haml
@@ -11,7 +11,8 @@
           %li
             -#%i.icon-home
             %a{href: "/welcome#index"} Home
-
+          %li
+            %a{href: "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B3VXX94SN4WGA", :target => 'blank'} Donate
         -#  %li
         -#    %a#swatch-link{href: "../#gallery"} Gallery
         -#  %li.dropdown
