--- a/app/views/user/tracks.html.haml
+++ b/app/views/user/tracks.html.haml
@@ -14,7 +14,7 @@
           %td
             = idx+1
           %td
-            %img{:src => "#{track['image_url']}", :width => 64, :height => 64 }
+            %img{:src => "#{track.image_url}", :width => 64, :height => 64 }
           %td
             %h4
               = track.name
