add error tracking and locking so users don't spam the mog parser needlessly

--- a/app/views/user/mog_credentials.html.haml
+++ b/app/views/user/mog_credentials.html.haml
@@ -20,6 +20,7 @@
                 = password_field_tag('mog_password')
                 %br
                 %small note: this password will be sent in the clear, but it is not stored on this server
+            = f.hidden_field :mog_process, :value => true
         -#.span6
         -#  .bsa.well
         -#    %h3 Beats Credentials
